data/derived/fa15/progs/unify/prog0358.ml.out
Characters 56-58:
  let fixpoint (f,b) = let f' x = (f, f x = b) in wwhile (f',b);;
                                                          ^^
Error: This expression has type 'a -> ('a -> 'b) * bool
       but an expression was expected of type 'a -> 'a * bool
       The type variable 'a occurs inside 'a -> 'b
